# cpp-exercises-boilerplate

./: .dockerignore  .env  .gitignore  .prettierignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh  compose-dev.yaml  compose.yaml  install.sh  script.sh
cmake/: helpers.cmake
examples/: CMakeLists.txt
include/app/: CMakeLists.txt  app.hpp
include/exercises/: CMakeLists.txt  exercise.hpp
src/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt  app.cpp
src/exercises/: CMakeLists.txt  exercise.cpp  exercise_1.cpp  exercise_2.cpp  exercise_3.cpp
tools/: CMakeLists.txt
tools/cppversion/: CMakeLists.txt  cppversion.hpp
